fix eww workspace icon spacing

--- a/modules/hm/eww/config/modules/bar.scss
+++ b/modules/hm/eww/config/modules/bar.scss
@@ -9,6 +9,7 @@
   padding: 5px 2px;
 
   .workspace-icon {
+    padding: 5px 0px;
   };
   .empty-workspace-icon {
   };
